--- a/CustomRPC/Strings.hi.resx
+++ b/CustomRPC/Strings.hi.resx
@@ -194,4 +194,8 @@
     <value>क्या आप सुनिश्चित हैं कि आप शुरू करना चाहते हैं?
 यह वापस नहीं किया जा सकता।</value>
   </data>
+  <data name="deleteSettings" xml:space="preserve">
+    <value>क्या आप एप्लिकेशन की सेटिंग हटाना चाहते हैं?
+इसे पूर्ववत नहीं किया जा सकता।</value>
+  </data>
 </root>
