--- a/CustomRPC/MainForm.vi.resx
+++ b/CustomRPC/MainForm.vi.resx
@@ -121,7 +121,7 @@
     <value>Nhấn đúp vào icon để hiển thị nó, hoặc nhấn chuột phải để thoát.</value>
   </data>
   <data name="trayIcon.BalloonTipTitle" xml:space="preserve">
-    <value>Ứng dụng sẽ chạy ẩn.</value>
+    <value>Ứng dụng sẽ chạy ngầm.</value>
   </data>
   <data name="openToolStripMenuItem.Text" xml:space="preserve">
     <value>Mở</value>
@@ -326,7 +326,7 @@
     <value>Ngắt kết nối</value>
   </data>
   <data name="buttonDisconnect.ToolTip" xml:space="preserve">
-    <value>Ngắt kết nối ứng dụng khỏi Discord. Thao tác này có thể mất một lúc.</value>
+    <value>Ngắt kết nối ứng dụng khỏi Discord. Điều này có thể mất một lúc.</value>
   </data>
   <data name="labelID.ToolTip" xml:space="preserve">
     <value>ID ứng dụng từ trang Discord Developer Portal.</value>
@@ -338,7 +338,7 @@
     <value>Dòng hai trong trạng thái.</value>
   </data>
   <data name="labelSmallKey.ToolTip" xml:space="preserve">
-    <value>Tên định danh của hình ảnh nhỏ hoặc URL hình ảnh.</value>
+    <value>Tên asset của hình ảnh nhỏ hoặc URL hình ảnh.</value>
   </data>
   <data name="labelSmallText.ToolTip" xml:space="preserve">
     <value>Văn bản được hiển thị khi di chuột vào hình ảnh nhỏ.</value>
@@ -347,7 +347,7 @@
     <value>Văn bản được hiển thị khi di chuột vào hình ảnh lớn.</value>
   </data>
   <data name="labelLargeKey.ToolTip" xml:space="preserve">
-    <value>Tên định danh của hình ảnh lớn hoặc URL hình ảnh.</value>
+    <value>Tên asset của hình ảnh lớn hoặc URL hình ảnh.</value>
   </data>
   <data name="labelSmall.Size" type="System.Drawing.Size, System.Drawing">
     <value>80, 14</value>
@@ -386,7 +386,7 @@
     <value>188, 18</value>
   </data>
   <data name="radioButtonLocalTime.Text" xml:space="preserve">
-    <value>Thời gian địa phương của bạn</value>
+    <value>Thời gian tại nơi của bạn</value>
   </data>
   <data name="radioButtonLocalTime.ToolTip" xml:space="preserve">
     <value>Hiển thị thời gian hiện tại của bạn ở định dạng 24 giờ.</value>
