--- a/CustomRPC/MainForm.pa.resx
+++ b/CustomRPC/MainForm.pa.resx
@@ -468,4 +468,7 @@
   <data name="newPresetToolStripMenuItem.Text" xml:space="preserve">
     <value>ਨਵਾਂ ਪ੍ਰੀਸੈਟ</value>
   </data>
+  <data name="labelType.ToolTip" xml:space="preserve">
+    <value>ਹਾਜ਼ਰੀ ਲਈ ਗਤੀਵਿਧੀ ਦੀ ਕਿਸਮ।</value>
+  </data>
 </root>
