--- a/CustomRPC/Strings.et.resx
+++ b/CustomRPC/Strings.et.resx
@@ -210,4 +210,7 @@ Seda ei saa tühistada.</value>
   <data name="presenceTypeCompeting" xml:space="preserve">
     <value>Võistleb</value>
   </data>
+  <data name="setPresetDirectory" xml:space="preserve">
+    <value />
+  </data>
 </root>
