--- a/CustomRPC/Strings.pl.resx
+++ b/CustomRPC/Strings.pl.resx
@@ -210,4 +210,7 @@ Nie da się tego cofnąć.</value>
   <data name="presenceTypeCompeting" xml:space="preserve">
     <value>Rywalizuje w</value>
   </data>
+  <data name="setPresetDirectory" xml:space="preserve">
+    <value />
+  </data>
 </root>
