--- a/CustomRPC/Strings.resx
+++ b/CustomRPC/Strings.resx
@@ -215,4 +215,7 @@ This cannot be undone.</value>
   <data name="presenceTypeCompeting" xml:space="preserve">
     <value>Competing</value>
   </data>
+  <data name="setPresetDirectory" xml:space="preserve">
+    <value>Set Preset Directory</value>
+  </data>
 </root>
