--- a/CustomRPC/Strings.ro.resx
+++ b/CustomRPC/Strings.ro.resx
@@ -210,4 +210,7 @@ Această acțiune nu poate fi revertată.</value>
   <data name="presenceTypeCompeting" xml:space="preserve">
     <value>Concurând</value>
   </data>
+  <data name="setPresetDirectory" xml:space="preserve">
+    <value />
+  </data>
 </root>
