--- a/CustomRPC/Strings.ru.resx
+++ b/CustomRPC/Strings.ru.resx
@@ -120,6 +120,11 @@
   <data name="error" xml:space="preserve">
     <value>Ошибка</value>
   </data>
+  <data name="errorCannotConnect" xml:space="preserve">
+    <value />
+    <comment>Не удаётся подключиться к клиенту Discord.
+Вы уверены, что он запущен?</comment>
+  </data>
   <data name="errorNoID" xml:space="preserve">
     <value>ID не указан!</value>
   </data>
@@ -152,11 +157,6 @@
   </data>
   <data name="statusError" xml:space="preserve">
     <value>Ошибка подключения (Неправильный ID?)</value>
-  </data>
-  <data name="errorCannotConnect" xml:space="preserve">
-    <value></value>
-    <comment>Не удаётся подключиться к клиенту Discord.
-Вы уверены, что он запущен?</comment>
   </data>
   <data name="errorInvalidURL" xml:space="preserve">
     <value>Для кнопки (кнопок) указан неверный URL или текст слишком длинный!</value>
@@ -215,5 +215,8 @@
   </data>
   <data name="presenceTypeCompeting" xml:space="preserve">
     <value>Соревнуется</value>
+  </data>
+  <data name="setPresetDirectory" xml:space="preserve">
+    <value />
   </data>
 </root>
