--- a/CustomRPC/Strings.bn.resx
+++ b/CustomRPC/Strings.bn.resx
@@ -184,4 +184,7 @@
   <data name="errorStartupShortcut" xml:space="preserve">
     <value>স্টার্টআপ শর্টকাট যোগ করতে বা সরাতে ব্যর্থ হয়েছে:</value>
   </data>
+  <data name="setPresetDirectory" xml:space="preserve">
+    <value />
+  </data>
 </root>
