--- a/CustomRPC/Strings.bs.resx
+++ b/CustomRPC/Strings.bs.resx
@@ -184,4 +184,7 @@ Pritisnite Da da bi resetovali podešavanja, pritisnite Ne da izađete.</value>
   <data name="errorStartupShortcut" xml:space="preserve">
     <value>Dodavanje ili uklanjanje prečice za pokretanje nije uspjelo:</value>
   </data>
+  <data name="setPresetDirectory" xml:space="preserve">
+    <value />
+  </data>
 </root>
