--- a/CustomRPC/Strings.cy.resx
+++ b/CustomRPC/Strings.cy.resx
@@ -184,4 +184,7 @@ Pwyswch Ie i ailosod y gosodiadau, pwyswch Na i roi'r gorau iddi.</value>
   <data name="errorStartupShortcut" xml:space="preserve">
     <value>Wedi methu ag ychwanegu neu ddileu llwybr byr cychwyn:</value>
   </data>
+  <data name="setPresetDirectory" xml:space="preserve">
+    <value />
+  </data>
 </root>
