--- a/CustomRPC/Strings.gl.resx
+++ b/CustomRPC/Strings.gl.resx
@@ -184,4 +184,7 @@ Prema Si para restablecer a configuración, prema Non para saír.</value>
   <data name="errorStartupShortcut" xml:space="preserve">
     <value>Produciuse un erro ao engadir ou eliminar un atallo de inicio:</value>
   </data>
+  <data name="setPresetDirectory" xml:space="preserve">
+    <value />
+  </data>
 </root>
