--- a/CustomRPC/Strings.is.resx
+++ b/CustomRPC/Strings.is.resx
@@ -184,4 +184,7 @@
   <data name="errorStartupShortcut" xml:space="preserve">
     <value>Mistókst að bæta við eða fjarlægja ræsingarflýtileið:</value>
   </data>
+  <data name="setPresetDirectory" xml:space="preserve">
+    <value />
+  </data>
 </root>
