--- a/CustomRPC/Strings.ka.resx
+++ b/CustomRPC/Strings.ka.resx
@@ -208,4 +208,7 @@
   <data name="presenceTypeCompeting" xml:space="preserve">
     <value>შეჯიბრში მონაწილეობს</value>
   </data>
+  <data name="setPresetDirectory" xml:space="preserve">
+    <value />
+  </data>
 </root>
