--- a/CustomRPC/Strings.mk.resx
+++ b/CustomRPC/Strings.mk.resx
@@ -184,4 +184,7 @@
   <data name="errorStartupShortcut" xml:space="preserve">
     <value>Грешка додека пробување да се стави или избрише почетна кратенка:</value>
   </data>
+  <data name="setPresetDirectory" xml:space="preserve">
+    <value />
+  </data>
 </root>
