--- a/CustomRPC/Strings.my.resx
+++ b/CustomRPC/Strings.my.resx
@@ -184,4 +184,7 @@ Files များကို ပြန်လည်ပြုပြင်ရန် 
   <data name="errorStartupShortcut" xml:space="preserve">
     <value>Shortcut ကို ထည့်ဖို့ ဒါမှမဟုတ် ဖယ်ရှားဖို့ fail ပါတယ်:</value>
   </data>
+  <data name="setPresetDirectory" xml:space="preserve">
+    <value />
+  </data>
 </root>
