--- a/CustomRPC/Strings.ur.resx
+++ b/CustomRPC/Strings.ur.resx
@@ -190,4 +190,7 @@
   <data name="statusUpdatingPresence" xml:space="preserve">
     <value>موجودگی اپڈیٹ کر رہا ہے...</value>
   </data>
+  <data name="setPresetDirectory" xml:space="preserve">
+    <value />
+  </data>
 </root>
